começo do header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>whitespace teste</title>
+    <title>whitepace</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="img/whitepace-icon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header-logo">
+            <a href="">
+            <div>
+                <img src="img/whitepace-icon.png" alt="">
+            </div>
+            <a href="">whitepace</a></a>
+        </div>
+
+        <nav class="header-nav">
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <div class="header-buttons">
+            <div class="log-in-button"></div>
+            <div class=""></div>
+        </div>
+    </header>
+    <section class="first-page"></section>
+    <section></section>
+    <footer></footer>
 </body>
 </html>
