página parcialmente pronta

--- a/index.html
+++ b/index.html
@@ -1,41 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>whitepace</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="img/whitepace-icon.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="shortcut icon"
+      href="img/whitepace-icon.png"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Inter:wght@500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="header">
-        <div class="header-logo">
-            <a href="">
-            <div>
-                <img src="img/whitepace-icon.png" alt="">
-            </div>
-            <a href="">whitepace</a></a>
-        </div>
+      <div class="header-logo">
+        <a href="">
+          <div>
+            <img src="img/whitepace-icon.png" alt="" />
+          </div>
+          <a href="">whitepace</a></a
+        >
+      </div>
 
-        <nav class="header-nav">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </nav>
-        <div class="header-buttons">
-            <div class="log-in-button"></div>
-            <div class=""></div>
-        </div>
+      <nav class="header-nav">
+        <ul>
+          <li>
+            <a href="">Products<img src="img/header-nav-icon.png" alt="" /></a>
+          </li>
+          <li>
+            <a href="">Solutions<img src="img/header-nav-icon.png" alt="" /></a>
+          </li>
+          <li>
+            <a href="">Products<img src="img/header-nav-icon.png" alt="" /></a>
+          </li>
+          <li>
+            <a href="">Products<img src="img/header-nav-icon.png" alt="" /></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header-buttons">
+        <a class="log-in-button">Login</a>
+        <a class="try-whitepace-button">Try whitepace free</a>
+      </div>
     </header>
     <section class="first-page"></section>
-    <section></section>
-    <footer></footer>
-</body>
+    <section class="second-page"></section>
+    <footer class="footer"></footer>
+  </body>
 </html>
